# mobility-shift

./: .gitignore  README.md
mobility-shift/: gunicorn.sh  main.json  pyproject.toml  start.sh
mobility-shift/mobilityshift/: manage.py
mobility-shift/mobilityshift/dummy_emails/arturo.neale@gmail.com/: It's your weekly logging time!.html
mobility-shift/mobilityshift/log/: urls.py  views.py
mobility-shift/mobilityshift/log/migrations/: 0001_initial.py  0002_rename_trips_trip.py  0003_alter_trip_distance.py  0004_alter_trip_distance_alter_trip_uuid.py  0005_remove_trip_uuid.py  0006_remove_trip_distance_trip_uuid.py  0007_remove_trip_log_time_remove_trip_mode.py  0008_remove_trip_key_trip_id.py  0009_trip_distance_trip_log_time_trip_mode.py  0010_delete_trip.py
mobility-shift/mobilityshift/main/: admin.py  apps.py  db_signals.py  forms.py  functions.py  models.py  send_email.py  tasks.py  urls.py  views.py
mobility-shift/mobilityshift/main/emailtemplates/: signedup.html  signedup.mjml
mobility-shift/mobilityshift/main/migrations/: 0001_initial.py  0001_squashed_0019_user_logged_this_week_alter_post_content_and_more.py  0002_trip_text_response_alter_trip_distance_and_more.py  0003_alter_trip_mode.py  0004_alter_trip_text_response.py  0005_deleteduser_alter_trip_distance_deletedtrip.py  0006_alter_deletedtrip_user.py  0007_deleteduser_emissions_saved_user_emissions_saved.py  0009_employer.py  (+19 more)
mobility-shift/mobilityshift/mobilityshift/: asgi.py  settings.py  urls.py  wsgi.py
mobility-shift/mobilityshift/signup/: admin.py  forms.py  models.py  urls.py  views.py
(+41 files in other folders)
