[project]
name = "mobility-shift"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-mathfilters (>=1.0.0,<2.0.0)",
    "django-altcha (>=0.1.3,<0.2.0)",
    "boto3 (>=1.38.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "celery (>=5.5.1,<6.0.0)",
    "django-celery-beat (>=2.8.0,<3.0.0)",
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
