[project]
name = "mobility-shift"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-mathfilters (>=1.0.0,<2.0.0)",
    "django-apscheduler (>=0.7.0,<0.8.0)",
    "azure-communication-email (>=1.0.0,<2.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "django-turnstile (>=0.1.2,<0.2.0)",
    "django-markdownx (>=4.0.9,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sentry-sdk[django] (>=2.37.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
